Class Methods getColumnNames() and loadTable() Assigned Integer via valueOf() Instead of new Integer() for Instances columnSize & preferredColumnSizeHashMap.